[package]
name = "page-lock"
version = "2.0.0"
edition = "2018"

description = "A library for reading and writing data from bytes array"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/page-lock.rs"
license = "MIT"
keywords = ["async", "locking", "lock"]

[dependencies]
dashmap = "5"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }