[package]
name = "page-lock"
version = "3.0.0"
edition = "2018"

description = "A library for reading and writing data from bytes array"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/page-lock.rs"
license = "MIT"
keywords = ["async", "locking", "lock"]

[dependencies]
c-map = "0.2"

[dev-dependencies]
tokio-test = "0.4"
futures-lite = "1.11.0"
wasm-bindgen-test = "0.3.0"

fastrand = "1.7.0"
async-channel = "1.6.1"
tokio = { version = "1", features = ["time"] }